update kotlin version and buildscripts